@@ -1,0 +1,52 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
+<CodeBlocks_project_file>
+	<FileVersion major="1" minor="6" />
+	<Project>
+		<Option title="SmallTowns" />
+		<Option pch_mode="2" />
+		<Option compiler="gcc" />
+		<Build>
+			<Target title="FreeBSD">
+				<Option platforms="Unix;" />
+				<Option output="bin/SmallTowns" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/" />
+				<Option object_output=".obj/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="`sdl-config --cflags`" />
+				</Compiler>
+				<Linker>
+					<Add option="`sdl-config --libs`" />
+					<Add library="GL" />
+				</Linker>
+			</Target>
+		</Build>
+		<Compiler>
+			<Add option="-Wall" />
+		</Compiler>
+		<Unit filename="src/game.cpp" />
+		<Unit filename="src/game.h" />
+		<Unit filename="src/gamestate.h" />
+		<Unit filename="src/graphics/camera.h" />
+		<Unit filename="src/graphics/entity.h" />
+		<Unit filename="src/graphics/graphics.cpp" />
+		<Unit filename="src/graphics/graphics.h" />
+		<Unit filename="src/graphics/node.h" />
+		<Unit filename="src/input.cpp" />
+		<Unit filename="src/input.h" />
+		<Unit filename="src/main.cpp" />
+		<Unit filename="src/teststate.cpp" />
+		<Unit filename="src/teststate.h" />
+		<Unit filename="src/utilities/log.cpp" />
+		<Unit filename="src/utilities/log.h" />
+		<Unit filename="src/utilities/types.h" />
+		<Extensions>
+			<code_completion />
+			<envvars />
+			<debugger />
+		</Extensions>
+	</Project>
+</CodeBlocks_project_file>
